[package]
name = "gateway-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
axum-client-ip = "1.1.3"
axum-macros = "0.5.0"
http = "1.3.1"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["client", "http1", "http2"] }
hyper-util = {version = "0.1.17", features = ["client", "client-legacy", "tokio", "http1", "http2"]}
reqwest = {version = "0.12.24", features = ["http2", "rustls-tls"]}
serde_json = "1.0.145"
tokio = {version = "1.48.0", features = ["full"]} 
tower = "0.5.2"
tower-http = {version = "0.6.6", features = ["trace"]}
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.20", features = ["env-filter"]}
