[package]
name = "gateway-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
axum-client-ip = "1.1.3"
axum-macros = "0.5.0"
chrono = { version = "0.4.42", features = ["serde"] }
futures-util = "0.3.31"
http = "1.3.1"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["client", "http1", "http2"] }
hyper-util = {version = "0.1.17", features = ["client", "client-legacy", "tokio", "http1", "http2"]}
reqwest = {version = "0.12.24", features = ["http2", "rustls-tls"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = {version = "1.48.0", features = ["full"]} 
tokio-tungstenite = "0.28.0"
tower = "0.5.2"
tower-http = {version = "0.6.6", features = ["trace", "cors"]}
tower_governor = "0.8.0"
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.20", features = ["env-filter"]}
